--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,6 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
+<script src="https://kit.fontawesome.com/7008d6fa0f.js" crossorigin="anonymous" defer></script>
 
 </html>
